--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
-<script>
-const isLocal = location.hostname === 'localhost' || location.hostname === '127.0.0.1';
-const isStackBlitz = location.hostname.includes('stackblitz') || location.hostname.includes('webcontainer');
+<!doctype html>
+<html lang="th">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>พี่พร้อม</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
+  </body>
+</html>
 
-if (!isLocal && !isStackBlitz && 'serviceWorker' in navigator) {
-  window.addEventListener('load', () => {
-    navigator.serviceWorker.register('/sw.js', { scope: '/' })
-      .then(reg => reg.update())
-      .catch(err => console.error('Worker ลาหยุด:', err));
-  });
-}
-</script>
